--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,51 @@
-# Simple workflow for deploying static content to GitHub Pages
+# Enhanced workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
+# Triggers for the workflow
 on:
-  # Runs on pushes targeting the default branch
+  # Triggered on pushes to the main branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows manual triggering of the workflow from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Permissions for GITHUB_TOKEN
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Concurrency settings
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group: "pages"  # Grouping deployments under "pages" to allow only one concurrent deployment
+  cancel-in-progress: false  # Do not cancel in-progress deployments
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Single job for deployment
   deploy:
+    # Environment settings for the deployment
     environment:
-      name: github-pages
+      name: GitHub Pages
+      # Using the output of deployment step to set the URL
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Using the latest version of Ubuntu
+
     steps:
+      # Step to checkout the code from the repository
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Step to configure GitHub Pages
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
+      # Step to upload entire repository as an artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: '.'  # Upload entire repository
+
+      # Step to deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
